Added jwt key to configuration

--- a/Discite.API/appsettings.json
+++ b/Discite.API/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "db": "Server=localhost;Database=project_discite;Uid=root;Pwd=;"
+  },
+  "JWT": {
+    "Key": "ZQJPe7Ghu_v7M7kVy-WJhx6zAmlLuMECpjdguB5q616UjWtYuT-DzVOwfd8wiczoHbOtJIwevUrrTpIeRuSpXw",
+    "Issuer": "",
+    "Audience": "",
+    "ExpireInMinute": "60"
+  }
 }
