--- a/discite-backend.bundled.yaml
+++ b/discite-backend.bundled.yaml
@@ -76,6 +76,52 @@ spec:
   selector:
     app: mysql-nagy-illes
 
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nagy-illes-phpmyadmin-deployment
+  labels:
+    app: phpmyadmin
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: phpmyadmin
+  template:
+    metadata:
+      labels:
+        app: phpmyadmin
+    spec:
+      containers:
+        - name: phpmyadmin
+          image: phpmyadmin/phpmyadmin
+          env:
+            - name: PMA_HOST
+              value: mysql-nagy-illes-cluster-ip-service
+            - name: PMA_PORT
+              value: "3306"
+            - name: MYSQL_ROOT_PASSWORD
+              value: V@r1S3cret
+          ports:
+            - containerPort: 80
+                       
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: nagy-illes-phpmyadmin-cluster-ip-service
+spec:
+  type: ClusterIP
+  ports:
+    - port: 80
+      targetPort: 80
+  selector:
+    app: phpmyadmin
+
 ---
 
 apiVersion: apps/v1
@@ -94,7 +140,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: ghcr.io/jedlik-gyor/nagyilles-backend:1.0.0
+          image: ghcr.io/jedlik-gyor/nagyilles-backend:1.0.2
           env:
           - name: ConnectionStrings__db
             value: "Server=mysql-nagy-illes-cluster-ip-service.default.svc.cluster.local;Database=project_discite;Uid=root;Pwd=V@r1S3cret;"
@@ -121,14 +167,43 @@ spec:
   selector:
     component: nagy-illes-backend
     
----    
-
-
+---
 
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nagy-illes-ingress-service
+  name: nagy-illes-backend-ingress-service
+  annotations:
+    kubernetes.io/ingress.class: 'nginx'
+    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'    
+    
+spec:
+  tls:
+    - hosts:
+        - nagyilles.jedlik.cloud
+      secretName: cluster-jedlik-eu
+  rules:
+               
+    - host: nagyilles.jedlik.cloud
+      http:
+        paths:
+          - path: /api/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: nagy-illes-backend-cluster-ip-service
+                port:
+                  number: 80                  
+                                    
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nagy-illes-phpmyadmin-ingress-service
   annotations:
     kubernetes.io/ingress.class: 'nginx'
     nginx.ingress.kubernetes.io/use-regex: 'true'
@@ -139,16 +214,17 @@ metadata:
 spec:
   tls:
     - hosts:
-        - nagyilles.jedlik.cloud
+        - phpmyadmin.nagyilles.jedlik.cloud
       secretName: cluster-jedlik-eu
   rules:
-    - host: nagyilles.jedlik.cloud
+    - host: phpmyadmin.nagyilles.jedlik.cloud
       http:
         paths:
           - path: /?(.*)
             pathType: Prefix
             backend:
               service:
-                name: nagy-illes-backend-cluster-ip-service
+                name: nagy-illes-phpmyadmin-cluster-ip-service
                 port:
-                  number: 80
+                  number: 80                  
+                                    
